; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_device_blend_function_separate.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-subsystem.c_device_blend_function_separate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"glBlendFuncSeparate\00", align 1
@LOG_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [43 x i8] c"device_blend_function_separate (GL) failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @device_blend_function_separate(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @convert_gs_blend_type(i32 %15)
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @convert_gs_blend_type(i32 %17)
  store i32 %18, i32* %12, align 4
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @convert_gs_blend_type(i32 %19)
  store i32 %20, i32* %13, align 4
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @convert_gs_blend_type(i32 %21)
  store i32 %22, i32* %14, align 4
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* %12, align 4
  %25 = load i32, i32* %13, align 4
  %26 = load i32, i32* %14, align 4
  %27 = call i32 @glBlendFuncSeparate(i32 %23, i32 %24, i32 %25, i32 %26)
  %28 = call i32 @gl_success(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %33, label %30

30:                                               ; preds = %5
  %31 = load i32, i32* @LOG_ERROR, align 4
  %32 = call i32 @blog(i32 %31, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0))
  br label %33

33:                                               ; preds = %30, %5
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @UNUSED_PARAMETER(i32* %34)
  ret void
}

declare dso_local i32 @convert_gs_blend_type(i32) #1

declare dso_local i32 @glBlendFuncSeparate(i32, i32, i32, i32) #1

declare dso_local i32 @gl_success(i8*) #1

declare dso_local i32 @blog(i32, i8*) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
